# bank_operations_widget

./: .flake8  README.md  pyproject.toml  requirements.txt
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
test/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
test_report_html/: index.html
